--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="hu">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/haziko_icon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/haziko_icon.io.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
